--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "konva": "^9.3.20",
     "lucide-react": "^0.513.0",
     "next": "15.3.3",
+    "next-intl": "^4.1.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-hook-form": "^7.58.0",
