--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "axios": "^1.10.0",
     "konva": "^9.3.20",
     "lucide-react": "^0.513.0",
     "next": "15.3.3",
