--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@reduxjs/toolkit": "^2.8.2",
     "axios": "^1.10.0",
+    "firebase": "^11.9.1",
     "konva": "^9.3.20",
     "lucide-react": "^0.513.0",
     "next": "15.3.3",
@@ -34,8 +35,6 @@
     "typescript": "^5"
   },
   "overrides": {
-    "tailwindcss": {
-      "tailwindcss": "^4"
-    }
+    "tailwindcss": "^4"
   }
 }
